--- a/client/public/index.css
+++ b/client/public/index.css
@@ -46,6 +46,8 @@ h4 {
 
 h5 {
   margin-bottom: 3rem;
+  margin-top: 3rem;
+  color: #2d89e5;
   font-family: 'Montserrat';
   font-size: 2.5em;
   line-height: 3rem;
@@ -82,6 +84,14 @@ label {
   border-style: none
 }
 
+.color-blue {
+  color: #2d89e5;
+}
+
+.icon-card {
+  font-size: 100px;
+}
+
 .c-navbar-title {
   color: #2d89e5;
   font-family: 'Lato';
@@ -93,10 +103,11 @@ label {
 }
 
 .c-card {
-  border-radius: 10px;
+  border-radius: 0px;
   border-style: none;
   box-shadow: 0 0 20px 0 rgba(0,0,0,.1);
   padding: 15px;
+  height: 300px;
 }
 
 .c-split-header {
